Implementing IdempotencyKey in deposit